--- a/restaurant.html
+++ b/restaurant.html
@@ -34,8 +34,10 @@
 
         <div class="container3">
             <h1>Restaurants (Click the links)</h1>
+            <br>
+            <button id="randombutton">Click on the button for a random restaurant</button>
             <div class="linkrestaurants">
-                <ul>
+                <ul id="listOfrestaurants">
                     <a href="https://www.tavernonthegreen.com/"><li>Tavern On The Green</li></a>
                     <a href="https://www.marearestaurant.com/new-york"><li>Marea</li></a>
                     <a href="https://diningroom.com.au/"><li>The Dining Room</li></a>
